--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-PORT=3000
-URI_MONGO=mongodb://localhost:27017/proyect_store
+PORT=27017
+URI_MONGO=mongodb://localhost:27017/hoteling
 
 SECRETORPRIVATEKEY = Esto03MyPub1cK3y1609
